--- a/templates/registation.html
+++ b/templates/registation.html
@@ -8,7 +8,7 @@
 <body>
     <center>
         <h1>Registation Form</h1>
-        <form action="" method="POST">
+        <form action="" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
                 {{ufo.as_p}}
                 {{pfo.as_p}}
