--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'dummy.html' %}
+
+{% block title %}
+    <title>Registration
+    </title>
+
+{% endblock %}
+{% block body_block %}
     <center>
-        <h1>Registation Form</h1>
+        <h1>Registration Form</h1>
         <form action="" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
                 {{ufo.as_p}}
@@ -16,5 +16,4 @@
             <input type="submit" value="Register">
         </form>
     </center>
-</body>
-</html>
+{% endblock %}
