--- a/templates/dummy.html
+++ b/templates/dummy.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     {% block title %}
     <title>Hello, world!</title>
+    
     {% endblock %}
   </head>
   <body>
@@ -17,7 +18,15 @@
         <a href="{% url 'admin:index' %}" class="nav-link">Admin</a>
         <a href="{% url 'registration' %}" class="nav-link">Registration</a>
         <a href="{% url 'home' %}" class="nav-link">Home</a>
-        <a href="{% url 'user_login' %}" class="nav-link">User-login</a>
+
+
+        {% if user.is_authenticated %}
+          <a href="{% url 'profile_display' %}" class="nav-link">profile_display</a>
+          <a href="{% url 'user_logout' %}" class="nav-link">User-logout</a>
+        {% else %}
+          <a href="{% url 'user_login' %}" class="nav-link">User-login</a>
+        {% endif %}
+        
     </nav>
 
     <!-- Optional JavaScript; choose one of the two! -->
