--- a/templates/user_login.html
+++ b/templates/user_login.html
@@ -14,8 +14,11 @@
             <input type="text" name="un" id="un"><br><br>
             <label for="pw">Password</label>
             <input type="password" name="pw" id="pw"><br><br>
-            <input type="submit" value="user-login">
+            <input type="submit" value="user-login"><br><br>
+
+            <a href="{% url 'reset_password'%}" class="btn btn-primary">reset_password</a>
         </form>
+
     </center>
 </body>
 </html>
