--- a/templates/dummy.html
+++ b/templates/dummy.html
@@ -23,6 +23,7 @@
         {% if user.is_authenticated %}
           <a href="{% url 'profile_display' %}" class="nav-link">profile_display</a>
           <a href="{% url 'user_logout' %}" class="nav-link">User-logout</a>
+          <a href="{% url 'change_password' %}"clas="nav-link">Change-Password</a>
         {% else %}
           <a href="{% url 'user_login' %}" class="nav-link">User-login</a>
         {% endif %}
